# xworkmate.svc.plus

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  Makefile  README.md  agent.md  analysis_options.yaml  flutter_rust_bridge.yaml  patch_app_docs.py  patch_docs.py  patch_internal.py  patch_server.py  pubspec.yaml
config/: feature_flags.yaml
docs/: README_TESTING.md  xworkmate-app-core-functional-test-plan-v1.md
go/go_core/: main.go  (+1 more)
go_service/: go.mod
integration_test/: desktop_navigation_flow_test.dart  desktop_settings_flow_test.dart  home_flow_test.dart  login_flow_test.dart  test_support.dart
ios/: Podfile
lib/: main.dart
linux/: CMakeLists.txt
macos/: Podfile
patrol_test/: app_test.dart  camera_test.dart  permission_test.dart
rust/: Cargo.toml
rust/src/: error.rs  lib.rs  runtime.rs  types.rs
scripts/: build-aris-bridge.sh  build_rust_ffi.sh  copy_ffi_framework.sh  create-dmg.sh  embed-go-core-helper.sh  generate_ffi_bindings.sh  install-flutter-mac-dmg.sh  integrate_rust_flutter.sh  linux-postrm.sh  macos_generate_missing_dsyms.sh  package-flutter-mac-app.sh  package-ios-ipa.sh  package-linux-deb.sh  package-linux-rpm.sh  package-linux.sh  package-windows-msi.ps1  validate-macos-app-bundle.sh
test/: app_controller_desktop_gateway_bridge_client_test.dart  app_controller_desktop_runtime_cleanup_test.dart  app_controller_desktop_thread_binding_test.dart  app_controller_desktop_working_directory_dispatch_test.dart  assistant_execution_target_picker_widget_test.dart  test_support.dart  test_support_task_thread_fixture.dart  widget_test.dart
(+528 files in other folders)
